src/objects/Room__c.object
<CustomObject>
    <description>Room details for a Hotel</description>
    <fields>
        <fullName>Beds__c</fullName>
        <label>Bed(s)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <label>Hotel</label>
        <referenceTo>Hotel__c</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penthouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Villa</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Room</label>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>Room Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>